[gd_scene load_steps=2 format=3 uid="uid://17c5eqe2ac84"]

[ext_resource type="Script" path="res://scenes/CustomGameScene.gd" id="1_gslk2"]

[node name="NewGameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gslk2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "custom_game.lbl.title"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "custom_game.lbl.bots"

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "custom_game.lbl.bot.north"

[node name="BotNorth" type="CheckButton" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "custom_game.lbl.bot.east"

[node name="BotEast" type="CheckButton" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "custom_game.lbl.bot.south"

[node name="BotSouth" type="CheckButton" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "custom_game.lbl.bot.west"

[node name="BotWest" type="CheckButton" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "custom_game.lbl.winning_condition"

[node name="WinningCondition" type="OptionButton" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "custom_game.lbl.winning_condition.hands"
popup/item_0/id = 1
popup/item_1/text = "custom_game.lbl.winning_condition.points"
popup/item_1/id = 2

[node name="WinningConditionValue" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "custom_game.placeholder.winning_condition.value"

[node name="CreateCustomGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "custom_game.btn.create"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "custom_game.btn.back"
